--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,48 @@
+version: '3.9'
+
 services:
-  app_blue:
+  blue:
     image: ${BLUE_IMAGE}
     environment:
-      - PORT=3000
+      - PORT=${PORT}
       - RELEASE_ID=${RELEASE_ID_BLUE}
       - APP_POOL=blue
     ports:
-      - "8081:3000"
+      - "8081:${PORT}"  # Blue direct access
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${PORT}/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
 
-  app_green:
+  green:
     image: ${GREEN_IMAGE}
     environment:
-      - PORT=3000
+      - PORT=${PORT}
       - RELEASE_ID=${RELEASE_ID_GREEN}
       - APP_POOL=green
     ports:
-      - "8082:3000"
+      - "8082:${PORT}"  # Green direct access
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${PORT}/healthz"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
 
   nginx:
-    image: nginx:stable
-    depends_on:
-      - app_blue
-      - app_green
+    image: nginx:alpine
     ports:
-      - "8080:80"
+      - "8080:80"  # Public entrypoint
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-
+      - ./nginx/nginx.conf.template:/etc/nginx/conf.d/default.conf.template:ro
+    environment:
+      - PORT=${PORT}
+    command: /bin/sh -c "envsubst '$${PORT}' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+    depends_on:
+      - blue
+      - green
+    restart: unless-stopped
